TestSuite/errors/err0212.pas
function abs: integer; extensionmethod;
begin
end;
begin
  
end.